# notemancy-core

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  query.rs  query_native.rs  query_parser.rs  tags.rs  utils.rs
src/ai/: autotag.rs  mod.rs  sentence_transformer.rs
src/kanban/: crud.rs
src/notes/: crud.rs  mod.rs  utils.rs
src/workspaces/: crud.rs  utils.rs
