[package]
name = "notemancy-core"
version = "0.1.0"
edition = "2024"
authors = ["Rishikanth Chandrasekaran rishikanthc@gmail.com"]
description = "The core API library for notemancy"
license = "MIT"
readme = "README.md"
repository = "https://github.com/notemancy-pkm/notemancy-core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# polodb_core = "5.1.3"
chrono = "0.4.40"
rust-bert = { version = "0.23.0", features = [
  "default-tls",
  "download-libtorch",
  "remote",
] }
once_cell = "1.21.1"
anyhow = "1.0.97"
regex = "1.11.1"
walkdir = "2.5.0"
rayon = "1.10.0"


[dev-dependencies]
tempfile = "3.6"
serial_test = "0.5"
env_logger = "0.11.7"
